--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="icon" href="./icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Lucas Alonso" />
-    <meta
-      name="description"
-      content="Social media app"
-    />
+    <meta name="description" content="Social media app" />
     <title>Social media app</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  </body>
+</body>
+
 </html>
